--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <head>
-      <img src="images/image1.jpg" alt="ロゴです" width="50" height="50">
+      <img src="image1.jpg" alt="ロゴです" width="50" height="50">
       <h1>サイトのタイトルです</h1>
       <nav>
         <ul>
